# obsidianite

./: .gitignore  README.md  pyproject.toml
src/obsidianite/: banner.py  cli.py  config.py  git_utils.py  github_api.py  gui.py  security.py  theme.py
